--- a/ppdo-ar/src/app/components/header/header.component.html
+++ b/ppdo-ar/src/app/components/header/header.component.html
@@ -35,6 +35,9 @@
           <ng-template #noNotifications>
             <p class="p-4 text-sm text-gray-500 dark:text-gray-400">No new notifications.</p>
           </ng-template>
+          <a routerLink="/notifications" (click)="toggleNotificationMenu()" class="block px-4 py-2 text-sm text-blue-600 hover:bg-gray-100 dark:text-blue-400 dark:hover:bg-gray-600 border-t dark:border-gray-600">
+            View All Notifications
+          </a>
         </div>
       </div>
 
