--- a/ppdo-ar/src/app/components/project-component/project-dashboard/project-dashboard.component.html
+++ b/ppdo-ar/src/app/components/project-component/project-dashboard/project-dashboard.component.html
@@ -135,7 +135,12 @@
           <tbody class="bg-white dark:bg-gray-700 divide-y divide-gray-100 dark:divide-gray-600">
           <tr *ngFor="let project of projectsByDivision[divisionName]" class="hover:bg-gray-50 dark:hover:bg-blue-900 transition-colors">
             <td class="px-6 py-4">
-              <div class="font-medium text-gray-900 dark:text-white">{{ project.title }}</div>
+              <div class="font-medium text-gray-900 dark:text-white flex items-center gap-2">
+                {{ project.title }}
+                <span *ngIf="project.isNew" class="px-2.5 py-1 rounded-full text-xs font-medium bg-red-100 text-red-700 dark:bg-red-900/50 dark:text-red-300">
+                  New
+                </span>
+              </div>
               <div class="text-xs text-gray-500 dark:text-gray-400">{{ project.location }}</div>
             </td>
             <td class="px-4 py-4">
