--- a/ppdo-ar/src/app/components/project-component/project-detail/project-detail.component.html
+++ b/ppdo-ar/src/app/components/project-component/project-detail/project-detail.component.html
@@ -87,6 +87,11 @@
         </p>
       </div>
 
+      <div class="bg-gray-50 dark:bg-gray-700 p-6 rounded-xl border border-gray-200 dark:border-gray-600">
+        <h2 class="text-xl font-semibold text-gray-800 dark:text-gray-200 mb-4">Project Objectives</h2>
+        <p class="text-gray-700 dark:text-gray-300 leading-relaxed whitespace-pre-wrap">{{ project.objectives }}</p>
+      </div>
+
       <div
         class="bg-gray-50 dark:bg-gray-700 p-6 rounded-xl border border-gray-200 dark:border-gray-600"
       >
